# back-end/src/handlers/deadlines.ts
@@ -48,9 +48,14 @@ class Deadlines extends ResourceController {
 
   protected async getResources(): Promise<Deadline[]> {
     let deadlines: Deadline[] = await ddb.scan({ TableName: DDB_TABLES.deadlines });
+
+    const lowerLimit = this.queryParams.year
+      ? new Date(this.queryParams.year, 0, 1, 0, 0, 0, 0).toISOString()
+      : new Date().toISOString();
+
     deadlines = deadlines
       .map(x => new Deadline(x))
-      .filter(x => x.at >= new Date().toISOString())
+      .filter(x => x.at >= lowerLimit)
       .sort((a, b): number => a.at.localeCompare(b.at));
 
     await addStatisticEntry(this.galaxyUser, StatisticEntityTypes.DEADLINES);
